--- a/SchoolLanguageLearn/SchoolLanguageLearn/App.config
+++ b/SchoolLanguageLearn/SchoolLanguageLearn/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="LanguaheSchool322Entities" connectionString="metadata=res://*/Components.Model.csdl|res://*/Components.Model.ssdl|res://*/Components.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql-ser-larisa\serv1215;initial catalog=LanguaheSchool322;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LanguaheSchoollEntities" connectionString="metadata=res://*/Components.Model.csdl|res://*/Components.Model.ssdl|res://*/Components.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql-ser-larisa\serv1215;initial catalog=LanguaheSchooll;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
