--- a/SchoolLanguageLearn/SchoolLanguageLearn/SchoolLanguageLearn.csproj
+++ b/SchoolLanguageLearn/SchoolLanguageLearn/SchoolLanguageLearn.csproj
@@ -65,6 +65,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Components\PhotoUserControl1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Components\ServiceUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -109,6 +113,9 @@
     </Compile>
     <Compile Include="Components\Navigation.cs" />
     <Compile Include="Components\PartialClass\Service.cs" />
+    <Compile Include="Components\PhotoUserControl1.xaml.cs">
+      <DependentUpon>PhotoUserControl1.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Components\Product.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -126,6 +133,9 @@
     </Compile>
     <Compile Include="Components\ServiceUserControl.xaml.cs">
       <DependentUpon>ServiceUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Components\sysdiagrams.cs">
+      <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Components\Tag.cs">
       <DependentUpon>Model.tt</DependentUpon>
